# smart-thermostat-ui

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
Controllers/: systemcontroller.cpp  systemcontroller.h
UI/HomeScreen/: HeatSelectDialog.qml  HomeScreen.qml  TemperatureControlSlider.qml
UI/SettingsScreen/: SettingsMainMenu.qml  SettingsScreen.qml
